--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 
 [workspace]
 members=[
-  "token-vault/program"
+  "token-vault/program",
+  "token-vault/test/"
 ]
 exclude = []
 
