--- a/token-vault/program/Cargo.toml
+++ b/token-vault/program/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "metaplex-token-vault"
+name = "mpl-token-vault"
 version = "0.0.1"
 description = "Metaplex Token Vault"
 authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
