--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@metaplex/metaplex-program-library",
   "version": "0.0.0",
   "description": "Web interface to Smart Contracts by the Metaplex team.",
-  "workspaces": [],
+  "workspaces": [
+    "core/js/"
+  ],
   "repository": "git@github.com:metaplex/metaplex-program-library.git",
-  "author": "Thorsten Lorenz <thlorenz@gmx.de>",
+  "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "MIT",
   "private": true
 }
