--- a/core/js/package.json
+++ b/core/js/package.json
@@ -10,12 +10,11 @@
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
-    "fix:prettier": "prettier --write",
+    "fix:prettier": "prettier --write src/",
     "fix": "yarn fix:lint && yarn fix:prettier"
   },
   "files": [
-    "/dist",
-    "/src"
+    "/dist"
   ],
   "keywords": [
     "nft",
@@ -33,6 +32,7 @@
     "bs58": "^4.0.1"
   },
   "devDependencies": {
+    "eslint": "^8.3.0",
     "@types/bs58": "^4.0.1",
     "rimraf": "^3.0.2"
   }
