--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@metaplex/metaplex-program-library",
   "version": "0.0.0",
   "description": "Web interface to Smart Contracts by the Metaplex team.",
-  "workspaces": [
-    "core/js/"
-  ],
+  "workspaces": {
+    "packages": [
+      "core/js",
+      "token-vault/js"
+    ]
+  },
   "repository": "git@github.com:metaplex/metaplex-program-library.git",
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "MIT",
