--- a/core/js/package.json
+++ b/core/js/package.json
@@ -2,8 +2,8 @@
   "name": "@metaplex/mpl-core",
   "version": "0.0.0",
   "description": "MPL Core Tooling.",
-  "main": "mpl-core.js",
-  "types": "dist/mpl-core.d.ts",
+  "main": "dist/src/mpl-core.js",
+  "types": "dist/src/mpl-core.d.ts",
   "scripts": {
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
