--- a/token-vault/js/package.json
+++ b/token-vault/js/package.json
@@ -29,6 +29,7 @@
   "private": false,
   "dependencies": {
     "@metaplex/mpl-core": "0.0.0",
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.31.0"
   },
   "devDependencies": {
