--- a/.github/workflows/yarn-lint.yml
+++ b/.github/workflows/yarn-lint.yml
@@ -2,7 +2,7 @@ name: JS Lint All
 
 on:
   push:
-    branches: [master, thlorenz/feat/token-vault]
+    branches: [master]
   pull_request:
     branches: [master]
 
