--- a/token-metadata/program/Cargo.toml
+++ b/token-metadata/program/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "metaplex-token-metadata"
+name = "mpl-token-metadata"
 version = "0.0.1"
 description = "Metaplex Metadata"
 authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
 repository = "https://github.com/metaplex-foundation/metaplex"
 license = "Apache-2.0"
 edition = "2018"
-exclude = ["js/**"]
 
 [features]
 no-entrypoint = []
@@ -17,7 +16,7 @@ num-derive = "0.3"
 arrayref = "0.3.6"
 num-traits = "0.2"
 solana-program = "1.7.11"
-metaplex-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ], version="0.0.1" }
+mpl-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ], version="0.0.1" }
 spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
 thiserror = "1.0"
 borsh = "0.9.1"
