--- a/token-metadata/test/Cargo.toml
+++ b/token-metadata/test/Cargo.toml
@@ -17,5 +17,5 @@ borsh = "0.9.1"
 clap = "2.33.3"
 solana-clap-utils = "1.6"
 solana-cli-config = "1.6"
-metaplex-token-metadata = { path = "../program", features = [ "no-entrypoint" ] }
+mpl-token-metadata = { path = "../program", features = [ "no-entrypoint" ] }
 spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
