--- a/token-vault/js/package.json
+++ b/token-vault/js/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "MPL Token Vault JavaScript API.",
   "main": "mpl-token-vault.js",
-  "types": "lib/mpl-token-vault.d.ts",
+  "types": "dist/mpl-token-vault.d.ts",
   "scripts": {
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
