chore: cleanup github action to only run on master push/pull

--- a/.github/workflows/program-token-metadata.yml
+++ b/.github/workflows/program-token-metadata.yml
@@ -2,7 +2,7 @@ name: Program Metadata
 
 on:
   push:
-    branches: [master, thlorenz/feat/token-metadata]
+    branches: [master]
   pull_request:
     branches: [master]
 
