--- a/auction/program/Cargo.toml
+++ b/auction/program/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "metaplex-auction"
+name = "mpl-auction"
 version = "0.0.1"
 description = "Solana Auction Program"
 authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
 repository = "https://github.com/metaplex-foundation/metaplex"
 license = "Apache-2.0"
 edition = "2018"
-exclude = ["tests/**"]
 
 [features]
 no-entrypoint = []
