chore: only running auction program tests on master push/pr

--- a/.github/workflows/program-auction.yml
+++ b/.github/workflows/program-auction.yml
@@ -2,7 +2,7 @@ name: Program Auction
 
 on:
   push:
-    branches: [master, thlorenz/feat/auction]
+    branches: [master]
   pull_request:
     branches: [master]
 
