--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Web interface to Smart Contracts by the Metaplex team.",
   "scripts": {
+    "build": "lerna run build --scope @metaplex/mpl-core && lerna run --ignore @metaplex/mpl-core --parallel build",
     "lint": "lerna run --parallel lint",
     "fix": "lerna run --parallel fix"
   },
