--- a/.github/actions/yarn-install-and-verify/action.yml
+++ b/.github/actions/yarn-install-and-verify/action.yml
@@ -16,6 +16,28 @@ runs:
         path: '**/node_modules'
         key: ${{ inputs.cache_id }}-${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
+    ##############
+    # Prepare Core
+    ##############
+    
+    # All contract SDKs depend on mpl-core so we need to build at least that
+    # We avoid running this in the project root to avoid a check for a contract failing due to
+    # an issue in another contract which would cause a build failure.
+    - name: Install Core modules
+      if: ${{ inputs.working_dir != './core/js' }}
+      run: yarn install
+      working-directory: ./core/js 
+      shell: bash
+
+    - name: Build Core TypeScript 
+      if: ${{ inputs.working_dir != './core/js' }}
+      run: yarn build
+      working-directory: ./core/js 
+      shell: bash
+
+    ##############
+    # Verify Contract 
+    ##############
     - name: Install modules
       run: yarn install
       working-directory: ${{ inputs.working_dir }}
