--- a/metaplex/js/package.json
+++ b/metaplex/js/package.json
@@ -2,8 +2,8 @@
   "name": "@metaplex/mpl-metaplex",
   "version": "0.0.0",
   "description": "MPL Token Metadata JavaScript API.",
-  "main": "mpl-metaplex.js",
-  "types": "dist/mpl-metaplex.d.ts",
+  "main": "dist/src/mpl-metaplex.js",
+  "types": "dist/src/mpl-metaplex.d.ts",
   "scripts": {
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
