--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -49,6 +49,7 @@
     "debug": "^4.3.3",
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2",
+    "spok": "^1.4.2",
     "supports-color": "^9.2.1",
     "tape": "^5.3.2",
     "wait-on": "^6.0.0"
