--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -12,7 +12,7 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
-    "test": "echo mpl-token-metadata tests coming up ...",
+    "test": "tape ./dist/test/*.test.js",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
