--- a/auction/js/package.json
+++ b/auction/js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@metaplex/mpl-auction",
+  "name": "@metaplex-foundation/mpl-auction",
   "version": "0.0.0",
   "description": "MPL Token Metadata JavaScript API.",
   "main": "dist/src/mpl-auction.js",
@@ -24,12 +24,12 @@
     "blockchain"
   ],
   "homepage": "https://metaplex.com",
-  "repository": "https://github.com/metaplex/metaplex-program-library.git",
+  "repository": "https://github.com/metaplex-foundation/metaplex-program-library.git",
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@metaplex/mpl-core": "0.0.0",
+    "@metaplex-foundation/mpl-core": "0.0.0",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.31.0"
   },
