--- a/auction/js/package.json
+++ b/auction/js/package.json
@@ -5,6 +5,7 @@
   "main": "dist/src/mpl-auction.js",
   "types": "dist/src/mpl-auction.d.ts",
   "scripts": {
+    "prepublish": "yarn build && yarn test",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "test": "echo mpl-auction tests coming up ...",
