--- a/core/js/package.json
+++ b/core/js/package.json
@@ -5,6 +5,7 @@
   "main": "dist/src/mpl-core.js",
   "types": "dist/src/mpl-core.d.ts",
   "scripts": {
+    "prepublish": "yarn build && yarn test",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "test": "echo mpl-core tests coming up ...",
