--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "yarn build:core && yarn build:auction && yarn build:parallel && yarn build:metaplex",
     "test": "lerna run --parallel test",
     "lint": "lerna run --parallel lint",
-    "fix": "lerna run --parallel fix"
+    "fix": "lerna run --parallel fix",
+    "lerna:version": "lerna version",
+    "lerna:publish": "lerna publish"
   },
   "workspaces": {
     "packages": [
