chore: lerna added gitHead to published packages

--- a/auction/js/package.json
+++ b/auction/js/package.json
@@ -40,5 +40,6 @@
   "devDependencies": {
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2"
-  }
+  },
+  "gitHead": "d2d7cab0fe6706d3c33177395fdbb20e419a2ed4"
 }
