--- a/core/js/package.json
+++ b/core/js/package.json
@@ -40,5 +40,6 @@
     "@types/bs58": "^4.0.1",
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2"
-  }
+  },
+  "gitHead": "d2d7cab0fe6706d3c33177395fdbb20e419a2ed4"
 }
