--- a/metaplex/js/package.json
+++ b/metaplex/js/package.json
@@ -43,5 +43,6 @@
   "devDependencies": {
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2"
-  }
+  },
+  "gitHead": "d2d7cab0fe6706d3c33177395fdbb20e419a2ed4"
 }
