--- a/core/js/package.json
+++ b/core/js/package.json
@@ -5,7 +5,11 @@
   "main": "dist/src/mpl-core.js",
   "types": "dist/src/mpl-core.d.ts",
   "scripts": {
-    "prepublish": "yarn build && yarn test",
+    "check:publish-ready": "yarn build && yarn test",
+    "preversion": "yarn check:publish-ready",
+    "postversion": "git tag $npm_package_name@$npm_package_version",
+    "prepublish": "yarn check:publish-ready",
+    "postpublish": "git push --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "test": "echo mpl-core tests coming up ...",
