chore: set publish registry to npm for all packages

--- a/auction/js/package.json
+++ b/auction/js/package.json
@@ -19,7 +19,8 @@
     "/dist"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "keywords": [
     "nft",
