--- a/metaplex/js/package.json
+++ b/metaplex/js/package.json
@@ -19,7 +19,8 @@
     "/dist"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "keywords": [
     "nft",
