chore: fix test setup issues and implemented `test`
- `pretest` ensures that solana validator is running
- `posttest` ensures to kill it

--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -12,7 +12,9 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
+    "pretest": "yarn build && DEBUG=mpl* node dist/test/setup/init-validator.js",
     "test": "tape ./dist/test/*.test.js",
+    "posttest": "pkill solana-test-validator",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
