--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -12,7 +12,8 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
-    "pretest": "yarn build && DEBUG=mpl* node dist/test/setup/init-validator.js",
+    "pretest": "yarn build",
+    "test:init-validator": "DEBUG=amman* amman validator ./.ammanrc.js",
     "test": "tape ./dist/test/*.test.js",
     "posttest": "pkill solana-test-validator",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
