--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "lerna": "^4.0.0",
     "prettier": "^2.4.1",
+    "ts-node": "^10.4.0"
+  },
+  "dependencies": {
+    "mocha": "^9.1.3",
     "typescript": "^4.5.2"
   }
 }
