--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -13,9 +13,9 @@
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "pretest": "yarn build",
-    "amman:validator": "DEBUG=amman* amman validator",
+    "amman:start": "DEBUG=amman* amman validator",
+    "amman:stop": "pkill solana-test-validator",
     "test": "tape ./dist/test/*.test.js",
-    "posttest": "pkill solana-test-validator",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
