--- a/.github/actions/yarn-install-and-verify/action.yml
+++ b/.github/actions/yarn-install-and-verify/action.yml
@@ -7,6 +7,10 @@ inputs:
   working_dir:
     description: Directory in which to perform the yarn tasks
     required: true
+  skip_test:
+    description: If true, testing is skipped. This should be used when the tests are end-to-end and thus need a locally running test-validator with deployed Rust programs.
+    required: false
+    default: false
 
   build_core:
     description: If not false it will build the core package before running checks
@@ -89,6 +93,7 @@ runs:
       shell: bash
 
     - name: Test TypeScript
+      if: ${{ !inputs.skip_test }}
       run: yarn test
       working-directory: ${{ inputs.working_dir }}
       shell: bash
