--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -36,7 +36,7 @@
   "homepage": "https://metaplex.com",
   "repository": "https://github.com/metaplex-foundation/metaplex-program-library.git",
   "author": "Metaplex Maintainers <contact@metaplex.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "private": false,
   "dependencies": {
     "@solana/web3.js": "^1.31.0"
