--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members=[
   "token-vault/program",
   "token-vault/test",
   "token-metadata/program",
-  "token-metadata/test"
+  "token-metadata/test",
+  "private-metadata/",
 ]
 exclude = []
