--- a/Anchor.toml
+++ b/Anchor.toml
@@ -16,6 +16,9 @@ program = "target/deploy/mpl_auction_house.so"
 address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
 program = "target/deploy/mpl_token_metadata.so"
 
+[scripts]
+test = "npx ts-mocha -p ./tsconfig.json -t 1000000 **/program/tests/*.ts"
+
 [workspace]
 members = [
   "token-metadata/program",
