--- a/.github/actions/install-anchor/action.yml
+++ b/.github/actions/install-anchor/action.yml
@@ -20,6 +20,7 @@ runs:
           ./target/
         key: cargo-${{ runner.os }}-anchor-${{ hashFiles('**/Cargo.lock') }}
     - run: cargo install --git ${{inputs.anchor_git}} anchor-cli --locked --force
+      shell: bash
     - uses: actions/upload-artifact@v2
       with:
         name: anchor-binary
