refactor: add key generation to GH workflow

--- a/.github/workflows/program-fusion.yml
+++ b/.github/workflows/program-fusion.yml
@@ -48,4 +48,5 @@ jobs:
         id: run_test
         working-directory: ./
         run: |
+          solana-keygen new -o ~/.config/solana/id.json
           anchor test
