--- a/.github/actions/install-anchor/action.yml
+++ b/.github/actions/install-anchor/action.yml
@@ -21,6 +21,8 @@ runs:
         key: cargo-${{ runner.os }}-anchor-${{ hashFiles('**/Cargo.lock') }}
     - run: cargo install --git ${{inputs.anchor_git}} anchor-cli --locked --force
       shell: bash
+    - run: npm install typescript
+      shell: bash
     - uses: actions/upload-artifact@v2
       with:
         name: anchor-binary
