--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "yarn build:core && yarn build:auction && yarn build:parallel && yarn build:metaplex",
     "test": "lerna run --parallel test",
     "lint": "lerna run --parallel lint",
-    "fix": "lerna run --parallel fix"
+    "fix": "lerna run --parallel fix",
+    "test:auction-house": "ANCHOR_WALLET=~/.config/solana/id.json yarn ts-mocha -p tsconfig.build.json -t 1000000 auction-house/program/tests/auction-house.ts"
   },
   "workspaces": {
     "packages": [
