--- a/private-metadata/Cargo.toml
+++ b/private-metadata/Cargo.toml
@@ -36,6 +36,7 @@ spl-token-metadata = { version = "0.0.1", features = [
 thiserror = "1"
 zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }
 
+
 [target.'cfg(not(target_arch = "bpf"))'.dependencies]
 bincode = "1"
 lazy_static = "1.4.0"
@@ -43,3 +44,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 solana-sdk = "1.7.15"
 
+
+[dev-dependencies]
+time = "0.1.40"
