--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -39,6 +39,7 @@
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
+    "@metaplex-foundation/beet": "^0.0.1",
     "@solana/web3.js": "^1.31.0"
   },
   "devDependencies": {
