--- a/private-metadata/Cargo.toml
+++ b/private-metadata/Cargo.toml
@@ -31,6 +31,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha3 = "0.9"
 solana-program = "1.7.15"
+spl-associated-token-account = { version = "1.0.3", features = [
+    "no-entrypoint"
+] }
 spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
 spl-token-metadata = { version = "0.0.1", features = [
     "no-entrypoint"
