tests: add fusion tests run to GH workflow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true
     },
-    "include": ["tests/**/*.ts"]
-  }
+    "include": ["./**/program/tests/*.ts"]
+}
