--- a/.github/workflows/program-fusion.yml
+++ b/.github/workflows/program-fusion.yml
@@ -49,4 +49,5 @@ jobs:
         working-directory: ./
         run: |
           solana-keygen new -o ~/.config/solana/id.json
+          yarn install
           anchor test
