--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,3 +1,6 @@
+[programs.localnet]
+fusion = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+
 [registry]
 url = "https://anchor.projectserum.com"
 
@@ -5,19 +8,12 @@ url = "https://anchor.projectserum.com"
 cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
-[programs.localnet]
-mpl_auction_house="hausS13jsjafwWwGqZTUQRmWyvyxn9EQpqMwV1PBBmk"
-fusion = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
-
-[[test.genesis]]
-address = "hausS13jsjafwWwGqZTUQRmWyvyxn9EQpqMwV1PBBmk"
-program = "target/deploy/mpl_auction_house.so"
 [[test.genesis]]
 address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
-program = "target/deploy/mpl_token_metadata.so"
+program = "./target/deploy/mpl_token_metadata.so"
 
 [scripts]
-test = "npx ts-mocha -p ./tsconfig.json -t 1000000 **/program/tests/*.ts"
+test = "npx ts-mocha -p ./tsconfig.json -t 1000000 ./**/program/tests/*.ts"
 
 [workspace]
 members = [
