refactor: add force to yarn install command

--- a/.github/workflows/program-fusion.yml
+++ b/.github/workflows/program-fusion.yml
@@ -49,5 +49,5 @@ jobs:
         working-directory: ./
         run: |
           solana-keygen new -o ~/.config/solana/id.json
-          yarn install
+          yarn install --force
           anchor test
