--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -40,6 +40,7 @@
   "private": false,
   "dependencies": {
     "@metaplex-foundation/beet": "^0.0.1",
+    "@metaplex-foundation/beet-solana": "^0.0.1",
     "@solana/web3.js": "^1.31.0"
   },
   "devDependencies": {
