--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,6 +7,7 @@ wallet = "~/.config/solana/id.json"
 
 [programs.localnet]
 mpl_auction_house="hausS13jsjafwWwGqZTUQRmWyvyxn9EQpqMwV1PBBmk"
+mpl_fair_launch="faircnAB9k59Y4TXmLabBULeuTLgV7TkGMGNkjnA15j"
 
 [[test.genesis]]
 address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
@@ -16,8 +17,13 @@ program = "target/deploy/mpl_token_metadata.so"
 address = "hausS13jsjafwWwGqZTUQRmWyvyxn9EQpqMwV1PBBmk"
 program = "target/deploy/mpl_auction_house.so"
 
+[[test.genesis]]
+address = "faircnAB9k59Y4TXmLabBULeuTLgV7TkGMGNkjnA15j"
+program = "target/deploy/mpl_fair_launch.so"
+
 [workspace]
 members = [
   "token-metadata/program",
-  "auction-house/program"
+  "auction-house/program",
+  "fair-launch/program",
 ] 
