--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,8 @@
     "token-vault/js",
     "token-metadata/js",
     "metaplex/js",
-    "auction-house/js"
+    "auction-house/js",
+    "fair-launch/js"
   ],
   "useWorkspaces": true,
   "version": "independent",
