--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
       "token-metadata/js",
       "auction/js",
       "metaplex/js",
-      "auction-house/js"
+      "auction-house/js",
+      "fair-launch/js"
     ]
   },
   "repository": "git@github.com:metaplex-foundation/metaplex-program-library.git",
