--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members=[
   "token-vault/test",
   "token-metadata/program",
   "token-metadata/test",
-  "private-metadata/",
-  "private-metadata-demo/",
+  "private-metadata/program",
+  "private-metadata/cli",
 ]
 exclude = []
