--- a/private-metadata/cli/Cargo.toml
+++ b/private-metadata/cli/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 publish = false
 
 [dependencies]
+bs58 = "0.4.0"
+bytemuck = { version = "1.7.2", features = ["derive"] }
 clap = "2.33.3"
 solana-clap-utils = "1.7.15"
 solana-cli-config = "1.7.15"
