--- a/private-metadata/cli/Cargo.toml
+++ b/private-metadata/cli/Cargo.toml
@@ -20,6 +20,10 @@ solana-client = "1.7.15"
 solana-logger = "1.7.15"
 solana-remote-wallet = "1.7.15"
 solana-sdk = "1.7.15"
+spl-associated-token-account = { version = "1.0.3", features = [
+    "no-entrypoint"
+] }
+spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
 spl-token-metadata = { version = "0.0.1", features = [
     "no-entrypoint"
 ] }
