--- a/auction-house/program/Cargo.toml
+++ b/auction-house/program/Cargo.toml
@@ -23,3 +23,6 @@ spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
 mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ], version="0.0.1" }
 thiserror = "1.0"
 arrayref = "0.3.6"
+
+[dev-dependencies]
+anchor-client = "0.19.0"
