Spike js binding scaffolding for crypto primitives and private metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ members=[
   "token-metadata/test",
   "private-metadata/program",
   "private-metadata/cli",
+  "private-metadata/js/native",
 ]
 exclude = []
