--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
       "token-vault/js",
       "token-metadata/js",
       "auction/js",
-      "metaplex/js"
+      "metaplex/js",
+      "private-metadata/js/web"
     ]
   },
   "repository": "git@github.com:metaplex-foundation/metaplex-program-library.git",
