--- a/private-metadata/js/web/package.json
+++ b/private-metadata/js/web/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "babel-loader": "^8.2.3",
+    "buffer": "^6.0.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
@@ -42,11 +43,11 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
     "webpack-merge": "^5.8.0"
-  },
-  "dependencies": {}
+  }
 }
