--- a/private-metadata/js/web/package.json
+++ b/private-metadata/js/web/package.json
@@ -17,14 +17,24 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@project-serum/serum": "^0.13.61",
+    "@solana/spl-token-registry": "^0.2.1107",
+    "@solana/wallet-adapter-base": "0.4.1",
+    "@solana/wallet-adapter-react": "^0.7.1",
+    "@solana/wallet-adapter-wallets": "^0.6.1",
+    "@solana/web3.js": "^1.24.1",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "antd": "^4.16.12",
     "babel-loader": "^8.2.3",
+    "bs58": "^4.0.1",
     "buffer": "^6.0.3",
+    "buffer-layout": "^1.2.2",
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
@@ -34,12 +44,15 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.0.1",
+    "jazzicon": "^1.5.0",
     "jest": "^27.3.1",
+    "loglevel": "^1.8.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-router-dom": "5.2.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
