--- a/private-metadata/js/web/tsconfig.json
+++ b/private-metadata/js/web/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
     "jsx": "react",
+    "outDir": "./dist/",
+    "noImplicitAny": true,
+    "downlevelIteration": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "typeRoots": ["types", "../../types", "../../node_modules/@types"]
   }
 }
