--- a/private-metadata/js/web/package.json
+++ b/private-metadata/js/web/package.json
@@ -46,6 +46,8 @@
     "image-webpack-loader": "^8.0.1",
     "jazzicon": "^1.5.0",
     "jest": "^27.3.1",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "loglevel": "^1.8.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.5.0",
