Add AES decryption with decrypted cipher key
- pita to use cryptoJS

--- a/private-metadata/js/web/package.json
+++ b/private-metadata/js/web/package.json
@@ -23,6 +23,7 @@
     "@solana/wallet-adapter-react": "^0.8.1",
     "@solana/wallet-adapter-wallets": "0.8.1",
     "@solana/web3.js": "^1.24.1",
+    "@types/crypto-js": "^4.0.2",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
@@ -35,6 +36,7 @@
     "bs58": "^4.0.1",
     "buffer": "^6.0.3",
     "buffer-layout": "^1.2.2",
+    "crypto-js": "^4.1.1",
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
