--- a/private-metadata/js/web/package.json
+++ b/private-metadata/js/web/package.json
@@ -36,6 +36,7 @@
     "bs58": "^4.0.1",
     "buffer": "^6.0.3",
     "buffer-layout": "^1.2.2",
+    "comlink": "^4.3.1",
     "crypto-js": "^4.1.1",
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
@@ -65,6 +66,7 @@
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "worker-plugin": "^5.0.1"
   }
 }
