--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members=[
   "token-vault/test",
   "token-metadata/program",
   "token-metadata/test",
-  "nft-packs/program"
+  "nft-packs/program",
+  "membership-token/program"
 ]
 exclude = []
