--- a/auction-house/program/Cargo.toml
+++ b/auction-house/program/Cargo.toml
@@ -28,4 +28,7 @@ arrayref = "0.3.6"
 anchor-client = "0.19.0"
 shellexpand = "2.1.0"
 serde_json = "1.0"
+solana-program-test = "1.8.5"
+solana-program = "1.8.5"
+solana-sdk = "1.8.5"
 rand = "0.7.3"
