--- a/membership-token/program/Cargo.toml
+++ b/membership-token/program/Cargo.toml
@@ -16,3 +16,9 @@ default = []
 
 [dependencies]
 anchor-lang = "0.19.0"
+
+[dev-dependencies]
+anchor-client = "0.19.0"
+solana-program-test = "1.8.5"
+solana-program = "1.8.5"
+solana-sdk = "1.8.5"
