--- a/private-metadata/program/Cargo.toml
+++ b/private-metadata/program/Cargo.toml
@@ -46,7 +46,7 @@ zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_de
 
 
 [target.'cfg(not(target_arch = "bpf"))'.dependencies]
-rand = "0.7"
+rand_core = "0.6.3"
 solana-sdk = "1.7.15"
 
 
