Pass up transfer data to js
- currently we don't pass in which chunk we're transferring but we could
  just omit that and have the JS fix it up too...

--- a/private-metadata/js/native/Cargo.toml
+++ b/private-metadata/js/native/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 bincode = "1"
+bytemuck = { version = "1.7.2", features = ["derive"] }
 console_error_panic_hook = "0.1.7"
 curve25519-dalek = { path = "/Users/lwu/code/solana/curve25519-dalek", features = ["serde"] }
 memmap = { path = "/Users/lwu/code/solana/memmap-rs" }
