--- a/membership-token/program/Cargo.toml
+++ b/membership-token/program/Cargo.toml
@@ -16,3 +16,5 @@ default = []
 
 [dependencies]
 anchor-lang = "0.19.0"
+anchor-spl = "0.19.0"
+mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ], version="0.0.1" }
