--- a/private-metadata/js/web/package.json
+++ b/private-metadata/js/web/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
+    "@types/react-content-loader": "^4.0.0",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -55,6 +56,7 @@
     "node-sass": "^6.0.1",
     "prettier": "^2.5.0",
     "react": "^17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "5.2.0",
