--- a/private-metadata/program/Cargo.toml
+++ b/private-metadata/program/Cargo.toml
@@ -23,6 +23,7 @@ arrayref = "0.3.6"
 base64 = "0.13"
 bincode = "1"
 bytemuck = { version = "1.7.2", features = ["derive"] }
+byteorder = { version = "^1.2.3", default-features = false }
 curve25519-dalek = { path = "/Users/lwu/code/solana/curve25519-dalek", features = ["serde"] }
 curve25519-dalek-onchain = { path = "/Users/lwu/code/solana/curve25519-dalek-onchain/program", features = ["no-entrypoint"] }
 lazy_static = "1.4.0"
