--- a/private-metadata/program/Cargo.toml
+++ b/private-metadata/program/Cargo.toml
@@ -49,7 +49,9 @@ zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_de
 bs58 = "0.4.0"
 rand_core = "0.6.3"
 serde_json = "1.0"
+solana-program-test = "1.7.15"
 solana-sdk = "1.7.15"
+mpl-token-metadata = { path = "../../token-metadata/program" }
 
 
 [dev-dependencies]
