--- a/token-entangler/program/Cargo.toml
+++ b/token-entangler/program/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "metaplex-token-entangler"
+name = "mpl-token-entangler"
 version = "0.1.0"
 edition = "2018"
 
@@ -7,7 +7,7 @@ edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "metaplex_token_entangler"
+name = "mpl_token_entangler"
 
 [features]
 no-entrypoint = []
@@ -16,10 +16,10 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.17.0"
-anchor-spl = "0.17.0"
+anchor-lang = "0.19.0"
+anchor-spl = "0.19.0"
 spl-token = { version = "3.2",  features = ["no-entrypoint"] }
 spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
-metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
+mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ], version="0.0.1" }
 thiserror = "1.0"
 
