--- a/gumdrop/program/Cargo.toml
+++ b/gumdrop/program/Cargo.toml
@@ -1,16 +1,14 @@
 [package]
-name = "gumdrop"
+name = "mpl_gumdrop"
 version = "0.0.1"
 description = "A Solana program for distributing tokens and NFTs according to a Merkle root."
-authors = [
-    "Lawrence Wu <larry.wu@solana.com>",
-]
+authors = [ "Lawrence Wu <larry.wu@solana.com>" ]
 keywords = ["solana"]
 edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "gumdrop"
+name = "mpl_gumdrop"
 
 [features]
 no-entrypoint = []
@@ -19,12 +17,8 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.17.0"
-anchor-spl = "0.17.0"
+anchor-lang = "0.19.0"
+anchor-spl = "0.19.0"
 solana-program = "1.7.11"
-spl-associated-token-account = { version = "1.0.3", features = [
-    "no-entrypoint"
-] }
-metaplex-token-metadata = { path = "../token-metadata/program", features = [
-    "no-entrypoint"
-] }
+spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
+mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ], version="0.0.1" }
