--- a/private-metadata/js/native/Cargo.toml
+++ b/private-metadata/js/native/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Lawrence Wu <larry.wu@solana.com>"]
 license = "MIT"
 exclude = ["artifacts.json", "index.node"]
+edition = "2018"
 
 [lib]
 crate-type = ["cdylib"]
@@ -19,5 +20,5 @@ getrandom = { version = "0.2", features = ["js"] }
 rand_core = { version = "0.6.3" }
 serde = { version = "1.0", default-features = false, features = ["alloc"] }
 sha3 = "0.9"
-solana-sdk = { version = "1.7.15", default-features = false }
+solana-sdk = { version = "1.9.3", default-features = false }
 wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
