--- a/membership-token/js/package.json
+++ b/membership-token/js/package.json
@@ -38,6 +38,8 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@metaplex-foundation/beet": "^0.0.1",
+    "@metaplex-foundation/beet-solana": "^0.0.1",
     "@solana/web3.js": "^1.31.0"
   },
   "devDependencies": {
