--- a/membership-token/js/package.json
+++ b/membership-token/js/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "eslint": "^8.3.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typedoc": "^0.22.10"
   }
 }
