feature: removed useless accounts arguments.

--- a/membership-token/cli/Cargo.toml
+++ b/membership-token/cli/Cargo.toml
@@ -15,3 +15,4 @@ mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-e
 borsh = "0.9.1"
 spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
 anchor-lang = "0.19.0"
+chrono = "0.4.19"
