Publish required modifications for curve25519 and merlin

--- a/private-metadata/program/Cargo.toml
+++ b/private-metadata/program/Cargo.toml
@@ -24,10 +24,10 @@ base64 = "0.13"
 bincode = "1"
 bytemuck = { version = "1.7.2", features = ["derive"] }
 byteorder = { version = "^1.2.3", default-features = false }
-curve25519-dalek = { path = "/Users/lwu/code/solana/curve25519-dalek", features = ["serde"] }
+curve25519-dalek = { git = "https://github.com/lwus/curve25519-dalek", features = ["serde"] }
 curve25519-dalek-onchain = { git = "https://github.com/lwus/curve25519-dalek-onchain", features = ["no-entrypoint"] }
 lazy_static = "1.4.0"
-merlin = { path = "/Users/lwu/code/solana/merlin" }
+merlin = { git = "https://github.com/lwus/merlin" }
 mpl-token-metadata = { path = "../../token-metadata/program", features = ["no-entrypoint"] }
 num-derive = "0.3"
 num-traits = "0.2"
