--- a/private-metadata/js/native/Cargo.toml
+++ b/private-metadata/js/native/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib"]
 bincode = "1"
 bytemuck = { version = "1.7.2", features = ["derive"] }
 console_error_panic_hook = "0.1.7"
-curve25519-dalek = { path = "/Users/lwu/code/solana/curve25519-dalek", features = ["serde"] }
+curve25519-dalek = { git = "https://github.com/lwus/curve25519-dalek", features = ["serde"] }
 private-metadata = { path = "../../program", default-features = false, features = ["no-entrypoint"] }
 getrandom = { version = "0.2", features = ["js"] }
 rand_core = { version = "0.6.3" }
