feat: cover init selling resource with tests

--- a/membership-token/js/package.json
+++ b/membership-token/js/package.json
@@ -14,7 +14,7 @@
     "build": "rimraf dist && tsc -p tsconfig.json",
     "amman:start": "DEBUG=\"amman*\" amman validator",
     "amman:stop": "pkill solana-test-validator",
-    "test": "tape ./dist/test/*.test.js",
+    "test": "DEBUG=\"*\" tape ./dist/test/*.test.js",
     "api:gen": "node scripts/api-gen-ts.js && prettier --write ./src/**/*.ts",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
@@ -42,13 +42,18 @@
   "dependencies": {
     "@metaplex-foundation/beet": "^0.0.1",
     "@metaplex-foundation/beet-solana": "^0.0.1",
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.31.0"
   },
   "devDependencies": {
     "@metaplex-foundation/amman": "^0.0.9",
+    "@metaplex-foundation/mpl-token-metadata": "0.0.2",
+    "@types/debug": "^4.1.7",
+    "@types/tape": "^4.13.2",
+    "debug": "^4.3.3",
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2",
-    "tape": "^5.3.2",
-    "typedoc": "^0.22.10"
+    "supports-color": "^9.2.1",
+    "tape": "^5.3.2"
   }
 }
