Add 404 reroute for gh pages and yarn start-prod

--- a/stealth/js/web/package.json
+++ b/stealth/js/web/package.json
@@ -5,7 +5,7 @@
   "author": "Lawrence Wu <larry.wu@solana.com>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn run clean-dist && webpack --config=configs/webpack/prod.js",
+    "build": "yarn run clean-dist && webpack --config=configs/webpack/prod.js && cp src/404.html dist",
     "clean-dist": "rimraf dist/*",
     "lint": "eslint './src/**/*.{js,ts,tsx}' --quiet",
     "start": "yarn run start-dev",
