--- a/stealth/js/web/tsconfig.json
+++ b/stealth/js/web/tsconfig.json
@@ -5,6 +5,8 @@
     "jsx": "react",
     "outDir": "./dist/",
     "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "downlevelIteration": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
