Added so filename arg

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM projectserum/build:v0.20.1
 ENV DEBIAN_FRONTEND=noninteractive
 
 ARG MPL_PROGRAM=candy-machine
+ARG MPL_PROGRAM_SO_FILENAME=mpl_candy_machine
 ARG CLUSTER=devnet
 ARG PAYER_KEY
 ARG PROGRAM_ID_KEY=TODO
@@ -18,4 +19,4 @@ RUN anchor build
 # Deploy
 WORKDIR /workdir/metaplex-program-library/target/deploy
 RUN touch key.json && echo ${PAYER_KEY} > key.json
-RUN solana program deploy mpl_candy_machine.so -u ${CLUSTER} -k key.json
+RUN solana program deploy ${MPL_PROGRAM_SO_FILENAME}.so -u ${CLUSTER} -k key.json
