Spike example escrow for stealth NFTs
- basically just the wrapper as described in the comments of
  `stealth::processor::process_init_transfer`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members=[
   "nft-packs/program",
   "fixed-price-sale/program",
   "stealth/program",
+  "stealth/escrow",
   "stealth/cli",
   "stealth/js/native",
 ]
