--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "prettier": "^2.4.1",
     "ts-mocha": "^8.0.0",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@metaplex-foundation/mpl-core": "file:core/js"
   }
 }
