Pack into single multiscalar mul after reducing overhead

--- a/stealth/program/Cargo.toml
+++ b/stealth/program/Cargo.toml
@@ -25,7 +25,7 @@ bincode = "1"
 bytemuck = { version = "1.7.2", features = ["derive"] }
 byteorder = { version = "^1.2.3", default-features = false }
 curve25519-dalek = { git = "https://github.com/lwus/curve25519-dalek", features = ["serde"] }
-curve25519-dalek-onchain = { git = "https://github.com/lwus/curve25519-dalek-onchain", features = ["no-entrypoint"] }
+curve25519-dalek-onchain = { path = "/Users/lwu/code/solana/curve25519-dalek-onchain/program", features = ["no-entrypoint"] }
 lazy_static = "1.4.0"
 merlin = { git = "https://github.com/lwus/merlin" }
 mpl-token-metadata = { path = "../../token-metadata/program", features = ["no-entrypoint"] }
